# ed25519

./: CMakeLists.txt  README.md
include/: ed25519.h  fe.h  fixedint.h  ge.h  precomp_data.h  sc.h
misc/: create_keypair.c
src/: add_scalar.c  fe.c  ge.c  key_exchange.c  keychain.c  keypair.c  sc.c  sign.c  verify.c
